# tj-datasets

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 00_como_instalar_o_pacote_tjdatasets.ipynb  01_exemplo_processamento.ipynb  02_Exemplo_Pre_Processamento_Limpo_e_Normalizado.ipynb  02_Uso_dos_pipeline_Limpo_e_Normalizado.ipynb  03_verificando_a_ocorrência_de_certas_expressões.ipynb
notebooks/preprocessamento/: 01_Exemplo_dataset.ipynb  2024_04_17_Extração_Fragmentos.ipynb  2024_04_18_Segmentado.ipynb  2024_04_30_Segmentado_e_Normalizado.ipynb  2024_04_Extrair_Sentenças.ipynb  2024_05_16_Voto.ipynb  2024_05_Fundamentação_Decisão.ipynb
src/tjdatasets/: __init__.py  fragmentador.py  fragmentar_acordao.py  pipe.py  pipes.py  preprocessing.py  segmentador.py  utils.py
tests/: test_lib.py
