[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tjdatasets"
version = "0.0.2"
authors = [
    {name="giliard", email="giliard.godoi@gmail.com"}
]
readme = "README.md"
description = "Text pre-processing utilities for TJ classification project"
requires-python = ">=3.8"
dependencies =[
    "pandas",
    "scikit-learn",
    "nltk",
    "spacy",
]

[project.optional-dependencies]
pt_core_news_lg = [
    "spacy>=3.0,<4.0",
    "pt-core-news-lg>=3.0,<4.0"
]